--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/router": "~13.1.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "@ngx-translate/core": "^14.0.0",
+    "ag-grid-angular": "^26.2.0",
+    "ag-grid-community": "^26.2.1",
+    "ag-grid-enterprise": "^26.2.1",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
