--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "ag-grid-community": "^26.2.1",
     "ag-grid-enterprise": "^26.2.1",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.0",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
+    "ng2-charts": "^3.0.8",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
