--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "ag-grid-angular": "^26.2.0",
     "ag-grid-community": "^26.2.1",
     "ag-grid-enterprise": "^26.2.1",
+    "apexcharts": "^3.35.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
+    "ng-apexcharts": "^1.7.1",
     "ng2-charts": "^3.0.9",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
