--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chart.js": "^3.7.0",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
+    "moment": "^2.29.3",
     "ng-apexcharts": "^1.7.1",
     "ng2-charts": "^3.0.9",
     "rxjs": "~7.4.0",
