--- a/package.json
+++ b/package.json
@@ -10,46 +10,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.4",
-    "@angular/cdk": "^13.1.1",
-    "@angular/common": "^14.0.4",
-    "@angular/compiler": "^14.0.4",
-    "@angular/core": "^14.0.4",
-    "@angular/flex-layout": "^13.0.0-beta.36",
-    "@angular/forms": "^14.0.4",
-    "@angular/material": "^13.1.1",
-    "@angular/platform-browser": "^14.0.4",
-    "@angular/platform-browser-dynamic": "^14.0.4",
-    "@angular/router": "^14.0.4",
-    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "@angular/animations": "^14.0.6",
+    "@angular/cdk": "^14.0.5",
+    "@angular/common": "^14.0.6",
+    "@angular/compiler": "^14.0.6",
+    "@angular/core": "^14.0.6",
+    "@angular/flex-layout": "^14.0.0-beta.40",
+    "@angular/forms": "^14.0.6",
+    "@angular/localize": "^14.0.6",
+    "@angular/material": "^14.0.5",
+    "@angular/platform-browser": "^14.0.6",
+    "@angular/platform-browser-dynamic": "^14.0.6",
+    "@angular/router": "^14.0.6",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@ngx-translate/core": "^14.0.0",
-    "ag-grid-angular": "^26.2.0",
-    "ag-grid-community": "^26.2.1",
-    "ag-grid-enterprise": "^26.2.1",
-    "apexcharts": "^3.35.0",
-    "bootstrap": "^5.1.3",
-    "chart.js": "^3.7.0",
+    "ag-grid-angular": "^28.0.0",
+    "ag-grid-community": "^28.0.2",
+    "ag-grid-enterprise": "^28.0.2",
+    "apexcharts": "^3.35.3",
+    "bootstrap": "^5.2.0",
+    "chart.js": "^3.8.0",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
-    "moment": "^2.29.3",
+    "moment": "^2.29.4",
     "ng-apexcharts": "^1.7.1",
-    "ng2-charts": "^3.0.9",
-    "rxjs": "~7.4.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "ng2-charts": "^4.0.0",
+    "rxjs": "~7.5.6",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.4",
-    "@angular/cli": "^14.0.4",
-    "@angular/compiler-cli": "^14.0.4",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "@angular-devkit/build-angular": "^14.0.6",
+    "@angular/cli": "^14.0.6",
+    "@angular/compiler-cli": "^14.0.6",
+    "@types/jasmine": "~4.0.3",
+    "@types/node": "^18.0.6",
+    "jasmine-core": "~4.2.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.7.4"
   }
 }
