--- a/package.json
+++ b/package.json
@@ -22,35 +22,37 @@
     "@angular/platform-browser": "^14.2.9",
     "@angular/platform-browser-dynamic": "^14.2.9",
     "@angular/router": "^14.2.9",
-    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.0",
     "@ngx-translate/core": "^14.0.0",
-    "ag-grid-angular": "^28.0.0",
-    "ag-grid-community": "^28.0.2",
-    "ag-grid-enterprise": "^28.0.2",
-    "apexcharts": "^3.35.3",
-    "bootstrap": "^5.2.0",
-    "chart.js": "^3.8.0",
+    "@nrwl/schematics": "^8.12.11",
+    "ag-grid-angular": "^28.2.1",
+    "ag-grid-community": "^28.2.1",
+    "ag-grid-enterprise": "^28.2.1",
+    "apexcharts": "^3.36.3",
+    "bootstrap": "^5.2.2",
+    "chart.js": "^3.9.1",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.4",
-    "ng-apexcharts": "^1.7.1",
-    "ng2-charts": "^4.0.0",
-    "rxjs": "~7.5.6",
-    "tslib": "^2.4.0",
-    "zone.js": "~0.11.6"
+    "ng-apexcharts": "^1.7.4",
+    "ng2-charts": "^4.0.1",
+    "npm-check-updates": "^16.3.16",
+    "rxjs": "~7.5.7",
+    "tslib": "^2.4.1",
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.8",
     "@angular/cli": "^14.2.8",
     "@angular/compiler-cli": "^14.2.9",
-    "@types/jasmine": "~4.0.3",
-    "@types/node": "^18.0.6",
-    "jasmine-core": "~4.2.0",
-    "karma": "~6.4.0",
+    "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.11.9",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.4"
+    "typescript": "~4.8.4"
   }
 }
