--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
+    "storybook": "npm run docs:json && start-storybook -p 6006",
+    "build-storybook": "npm run docs:json && build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +28,7 @@
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
     "@ngx-translate/core": "^14.0.0",
     "@nrwl/schematics": "^8.12.11",
+    "@popperjs/core": "^2.11.6",
     "ag-grid-angular": "^28.2.1",
     "ag-grid-community": "^28.2.1",
     "ag-grid-enterprise": "^28.2.1",
@@ -45,8 +49,19 @@
     "@angular-devkit/build-angular": "^14.2.8",
     "@angular/cli": "^14.2.8",
     "@angular/compiler-cli": "^14.2.9",
+    "@babel/core": "^7.20.5",
+    "@compodoc/compodoc": "^1.1.19",
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/angular": "^6.5.13",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.11.9",
+    "babel-loader": "^8.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.1",
