--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "^15.0.3",
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
     "@ngx-translate/core": "^14.0.0",
+    "@nrwl/angular": "^15.3.3",
     "@nrwl/schematics": "^8.12.11",
     "@popperjs/core": "^2.11.6",
     "ag-grid-angular": "^28.2.1",
