--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nrwl/angular": "^15.3.3",
     "@nrwl/schematics": "^8.12.11",
     "@popperjs/core": "^2.11.6",
+    "@tailwindcss/forms": "^0.5.3",
     "ag-grid-angular": "^28.2.1",
     "ag-grid-community": "^28.2.1",
     "ag-grid-enterprise": "^28.2.1",
@@ -62,6 +63,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.11.9",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.1",
@@ -69,6 +71,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
     "typescript": "~4.9.4"
   }
 }
